--- a/web/src/app/main/main.component.html
+++ b/web/src/app/main/main.component.html
@@ -1,5 +1,7 @@
-<div class="main-container">
-  <div class="main-content">
+<div class="container">
+  <div class="row">
 
   </div>
+  <label for='upload'>Upload Here!!</label>
+  <input id='upload' type="file" accept=".jpg, .jpeg, .png" (change)="preview()" #image_input name="img">
 </div>
