work with http request

--- a/web/src/app/main/main.component.html
+++ b/web/src/app/main/main.component.html
@@ -4,4 +4,6 @@
   </div>
   <label for='upload'>Upload Here!!</label>
   <input id='upload' type="file" accept=".jpg, .jpeg, .png" (change)="preview()" #image_input name="img">
+  <br>
+  <button class="btn btn-primary" (click)="upload()">Upload</button>
 </div>
