add sign in and sign up component and comdify header and add router

--- a/web/src/app/header/header.component.html
+++ b/web/src/app/header/header.component.html
@@ -1,5 +1,14 @@
 <div class="navbar-container">
   <div class="navbar-content">
 
+    <div class="navbar-header">
+      <a routerLink="" class="navbar-brand">CS 160 Team Project</a>
+    </div>
+
+    <ul class="nav navbar-nav navbar-right">
+      <li><button class="btn-primary btn" (click)="register()">Register</button></li>
+      <li><button class="btn-primary btn" (click)="signin()">Sign In</button></li>
+      <li><button class="btn-primary btn">Log Out</button></li>
+    </ul>
   </div>
 </div>
