--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,2 +1,10 @@
 <app-header></app-header>
-<app-main></app-main>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</div>
+
