--- a/web/src/app/header/header.component.html
+++ b/web/src/app/header/header.component.html
@@ -8,7 +8,9 @@
     <ul class="nav navbar-nav navbar-right">
       <li><button class="btn-primary btn" (click)="register()">Register</button></li>
       <li><button class="btn-primary btn" (click)="signin()">Sign In</button></li>
-      <li><button class="btn-primary btn">Log Out</button></li>
+      <ng-template *ngIf="!authService.isAuth()">
+        <li><button class="btn-primary btn">Log Out</button></li>
+      </ng-template>
     </ul>
   </div>
 </div>
