add username modal and testing with firebase, may change database if needed

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,8 +1,8 @@
 <app-header></app-header>
 
-<div class="container">
+<div class="container"  style="min-width: 770px;">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-12" style="border: 2px solid #bce8f1">
       <router-outlet></router-outlet>
     </div>
   </div>
