user auth is finished

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,8 +1,10 @@
-<app-header></app-header>
+<div style="min-width: 770px">
+  <app-header></app-header>
+</div>
 
 <div class="container"  style="min-width: 770px;">
   <div class="row">
-    <div class="col-md-12" style="border: 2px solid #bce8f1">
+    <div class="col-md-12" style="border: 2px solid #bce8f1; padding-bottom: 20px; padding-top: 20px;">
       <router-outlet></router-outlet>
     </div>
   </div>
