--- a/web/src/app/auth/signin/signin.component.html
+++ b/web/src/app/auth/signin/signin.component.html
@@ -4,18 +4,27 @@
 
       <div class="form-group">
         <label for="email">Mail</label>
-        <input type="email" id="email" name="email" ngModel class="form-control">
+        <input type="email" id="email" name="email" ngModel class="form-control" required email #email="ngModel">
       </div>
+      <span class="help-block" *ngIf="!email.valid && email.touched"
+            style="background-color: red; color: white; text-align: center; border-radius: 5px;">
+        Please Enter a Valid Email!
+      </span>
 
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" id="password" name="password" ngModel class="form-control">
+        <input type="password" id="password" name="password" ngModel class="form-control" #password="ngModel" required>
       </div>
+      <span class="help-block" *ngIf="!password.valid && password.touched"
+            style="background-color: red; color: white; text-align: center; border-radius: 5px;">
+        Please Enter a Valid Password!
+      </span>
 
-      <button class="btn btn-primary" type="submit">Sign In</button>
+      <button class="btn btn-primary" type="submit" [disabled]="!f.valid">Sign In</button>
+      <div class="form-group" *ngIf="!authService.userCreated">
+        <div class="row">
+        </div>
+      </div>
     </form>
   </div>
 </div>
-
-
-
