--- a/web/src/app/header/header.component.html
+++ b/web/src/app/header/header.component.html
@@ -5,14 +5,38 @@
       <a routerLink="" class="navbar-brand">CS 160 Team Project</a>
     </div>
 
-    <ul class="nav navbar-nav navbar-right">
+    <ul class="nav navbar-nav navbar-right header-btn-ul">
       <ng-template [ngIf]="!authService.isAuth()">
-        <li><button class="btn-primary btn" (click)="register()">Register</button></li>
-        <li><button class="btn-primary btn" (click)="signin()">Sign In</button></li>
+        <li class="header-btn-li"><button class="btn-primary btn" (click)="register()">Register</button></li>
+        <li class="header-btn-li"><button class="btn-primary btn" (click)="signin()">Sign In</button></li>
       </ng-template>
 
-      <li *ngIf="authService.isAuth()"><button class="btn-primary btn" (click)="logout()">Log Out</button></li>
+      <li class="profile" *ngIf="authService.isAuth()"><img src="./../../assets/img/profile-img.jpg"></li>
+
+      <li class="dropdown" appDropdown *ngIf="authService.isAuth()" style="height: 100%">
+        <a style="cursor: pointer; line-height: 40px; font-size: x-large;" class="dropdown-toggle" role="button">{{authService.getUsername()}}
+          <span class="caret"></span>
+        </a>
+        <ul class="dropdown-menu">
+          <li><a style="cursor: pointer;" (click)="nameChange = true;">Change Username</a></li>
+          <li><a style="cursor: pointer;" (click)="logout()">Log Out</a></li>
+        </ul>
+      </li>
 
     </ul>
+  </div>
+</div>
+
+<div *ngIf='nameChange' class='name-modal'>
+  <div class="name-box">
+    <div class="modal-header">
+      <span class="text-info">Please Give us Your Name</span>
+    </div>
+
+    <input type="text" name="username" class="form-control" [(ngModel)]="username">
+
+    <div class="btn-list">
+      <button class="btn btn-primary" (click)="changeUsername()" [disabled]="username === ''">Submit</button>
+    </div>
   </div>
 </div>
