--- a/web/src/app/header/header.component.scss
+++ b/web/src/app/header/header.component.scss
@@ -18,18 +18,103 @@
   height: 100%;
 }
 
-ul {
+.header-btn-ul {
   height: 100%;
   margin-right: 0;
 
-  li {
+  .header-btn-li {
     height: 100%;
     margin-left: 10px;
     margin-right: 10px;
     padding-top: 20px;
   }
 }
-/*
-.navbar-header {
-  float: left;
-}*/
+
+.profile {
+  margin-top: 10px;
+  height: 50px;
+  width: 50px;
+  text-align: center;
+  border: black solid 1px;
+
+  img {
+    height: 100%;
+    width: 100%;
+    -o-object-fit: contain;
+    object-fit: contain;
+  }
+}
+
+.name-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  z-index: 10;
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, .4);
+}
+
+.name-box {
+  margin-top: 14%;
+  height: 200px;
+  width: 400px;
+  background-color: whitesmoke;
+  border-radius: 10px;
+  margin-right: auto;
+  margin-left: auto;
+  position: relative;
+  border: solid 1px darkslategray;
+
+  -webkit-animation-name: animatetop;
+  -webkit-animation-duration: 0.4s;
+  animation-name: animatetop;
+  animation-duration: 0.4s;
+
+  input {
+    margin-top: 15px;
+    margin-left: 40px;
+    margin-right: 40px;
+    width: 320px;
+    height: 40px;
+    padding-bottom: 5px;
+  }
+}
+
+.btn-list {
+  border-top: solid 2px lightgrey;
+  margin-top: 20px;
+  margin-right: 30px;
+  margin-left: 30px;
+
+  button {
+    float: right;
+    margin-top: 15px;
+    margin-right: 25px;
+  }
+}
+
+.modal-header {
+  padding-top: 10px;
+  text-align: center;
+  margin-right: 30px;
+  margin-left: 30px;
+  border-bottom: solid 2px lightgrey;
+  height: 60px;
+
+  span {
+    font-size: x-large;
+  }
+}
+
+@-webkit-keyframes animatetop {
+  from {top: -300px; opacity: 0}
+  to {top: 0; opacity: 1}
+}
+
+@keyframes animatetop {
+  from {top: -300px; opacity: 0}
+  to {top: 0; opacity: 1}
+}
