--- a/web/src/app/main/main.component.scss
+++ b/web/src/app/main/main.component.scss
@@ -1,3 +1,13 @@
+.title {
+  width: 100%;
+  text-align:  center;
+  font-size: xx-large;
+  color: tomato;
+  font-family: "Comic Sans MS";
+  margin-bottom: 20px;
+}
+
+
 .name-modal {
   position: fixed;
   top: 0;
@@ -60,17 +70,6 @@
   span {
     font-size: x-large;
   }
-}
-
-input.ng-invalid.ng-touched {
-  border: solid red 1px;
-}
-
-.finish {
-  position:absolute;
-  left:0; right:0;
-  top:0; bottom:0;
-  margin:auto;
 }
 
 @-webkit-keyframes animatetop {
