--- a/web/src/app/auth/signup/signup.component.html
+++ b/web/src/app/auth/signup/signup.component.html
@@ -21,15 +21,11 @@
       </span>
 
       <button class="btn btn-primary" type="submit" [disabled]="!f.valid">Sign Up</button>
-      <span class="help-block" *ngIf="authService.errorMsg !== null"
+      <span class="help-block" *ngIf="authService.errorMsg !== ''"
             style="background-color: cornflowerblue; color: white; text-align: center; border-radius: 5px;">
         {{authService.errorMsg}}
       </span>
 
-      <div class="form-group" *ngIf="!authService.userCreated">
-        <div class="row">
-        </div>
-      </div>
     </form>
   </div>
 </div>
