--- a/web/src/app/header/header.component.html
+++ b/web/src/app/header/header.component.html
@@ -36,6 +36,7 @@
     <input type="text" name="username" class="form-control" [(ngModel)]="username">
 
     <div class="btn-list">
+      <button class="btn btn-danger" (click)="nameChange = false">Cancel</button>
       <button class="btn btn-primary" (click)="changeUsername()" [disabled]="username === ''">Submit</button>
     </div>
   </div>
