working on upload file

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -4,7 +4,7 @@
 
 <div class="container"  style="min-width: 770px;">
   <div class="row">
-    <div class="col-md-12" style="border: 2px solid #bce8f1; padding-bottom: 20px; padding-top: 20px;">
+    <div class="col-md-12 body">
       <router-outlet></router-outlet>
     </div>
   </div>
