--- a/web/src/app/main/main.component.html
+++ b/web/src/app/main/main.component.html
@@ -19,6 +19,11 @@
     </div>
 
     <ng-template [ngIf]="authService.isAuth()">
+
+      <app-upload></app-upload>
+
+
+
       <label for='upload'>Upload Here!!</label>
       <input id='upload' type="file" accept=".jpg, .jpeg, .png" (change)="preview()" #image_input name="img">
       <br>
