--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,8 +1,8 @@
-<div style="min-width: 770px">
+<div>
   <app-header></app-header>
 </div>
 
-<div class="container"  style="min-width: 770px;">
+<div class="container">
   <div class="row">
     <div class="col-md-12 body">
       <router-outlet></router-outlet>
