--- a/web/src/app/header/header.component.scss
+++ b/web/src/app/header/header.component.scss
@@ -9,7 +9,6 @@
   box-shadow: 0 0 4px rgba(0,0,0,.14), 0 4px 8px rgba(0,0,0,.28);
   top: 0;
   margin-bottom: 20px;
-  min-width: 800px;
 }
 
 .navbar-content {
@@ -117,4 +116,15 @@
 @keyframes animatetop {
   from {top: -300px; opacity: 0}
   to {top: 0; opacity: 1}
+}
+
+@media only screen and (max-width: 768px) {
+  .navbar-content {
+    margin-right: 0;
+    margin-left: 0;
+  }
+
+  .navbar-header {
+    display: none;
+  }
 }
