--- a/web/src/app/upload/upload.component.html
+++ b/web/src/app/upload/upload.component.html
@@ -3,7 +3,7 @@
 
   <div *ngIf="upload">
     <div class="progress">
-      <div class="progress-bar progress-bar-animated active"
+      <div class="progress-bar progress-bar-success progress-bar-animated progress-bar-striped active"
            [ngStyle]="{ 'width': upload?.progress + '%' }">{{upload?.progress}} %</div>
     </div>
 
