--- a/web/src/app/auth/signup/signup.component.html
+++ b/web/src/app/auth/signup/signup.component.html
@@ -21,9 +21,9 @@
       </span>
 
       <button class="btn btn-primary" type="submit" [disabled]="!f.valid">Sign Up</button>
-      <span class="help-block" *ngIf="authService.errorMsg !== ''"
+      <span class="help-block" *ngIf="authService.errorMsgReg !== ''"
             style="background-color: cornflowerblue; color: white; text-align: center; border-radius: 5px;">
-        {{authService.errorMsg}}
+        {{authService.errorMsgReg}}
       </span>
 
     </form>
