--- a/web/src/app/header/header.component.html
+++ b/web/src/app/header/header.component.html
@@ -7,11 +7,15 @@
 
     <ul class="nav navbar-nav navbar-right header-btn-ul">
       <ng-template [ngIf]="!authService.isAuth()">
-        <li class="header-btn-li"><button class="btn-primary btn" (click)="register()">Register</button></li>
-        <li class="header-btn-li"><button class="btn-primary btn" (click)="signin()">Sign In</button></li>
+        <li class="header-btn-li">
+          <button class="btn-primary btn" (click)="register()">Register</button>
+        </li>
+        <li class="header-btn-li">
+          <button class="btn-primary btn" (click)="signin()">Sign In</button>
+        </li>
       </ng-template>
 
-      <li class="profile" *ngIf="authService.isAuth()"><img src="{{profileUrl}}"></li>
+      <li class="profile" *ngIf="authService.isAuth()"><img [src]="authService.getPhoto()"></li>
 
       <li class="dropdown" appDropdown *ngIf="authService.isAuth()" style="height: 100%">
         <a style="cursor: pointer; line-height: 40px; font-size: x-large;" class="dropdown-toggle" role="button">{{authService.getUsername()}}
@@ -19,6 +23,7 @@
         </a>
         <ul class="dropdown-menu">
           <li><a style="cursor: pointer;" (click)="nameChange = true;">Change Username</a></li>
+          <li><a style="cursor: pointer;" (click)="proImgChange = true;">Change Profile Image</a></li>
           <li><a style="cursor: pointer;" (click)="logout()">Log Out</a></li>
         </ul>
       </li>
@@ -38,6 +43,39 @@
     <div class="btn-list">
       <button class="btn btn-danger" (click)="nameChange = false">Cancel</button>
       <button class="btn btn-primary" (click)="changeUsername()" [disabled]="username === ''">Submit</button>
+    </div>
+  </div>
+</div>
+
+<div *ngIf='proImgChange' class='name-modal'>
+  <div class="name-box" style="height: 250px">
+    <div class="modal-header">
+      <span class="text-info">Please Upload Profile Image</span>
+    </div>
+
+    <div *ngIf="upload">
+      <div class="progress">
+        <div class="progress-bar progress-bar-success progress-bar-animated progress-bar-striped active"
+             [ngStyle]="{ 'width': upload?.progress + '%' }">{{upload?.progress}} %
+        </div>
+      </div>
+    </div>
+
+
+    <div *ngIf="upload?.progress === 100" style="text-align: center">
+      Profile Image Has Been Changed!!!
+    </div>
+
+    <form style="margin-top: 10px; margin-bottom: 10px;">
+      <label for="file-upload" class="custom-file-upload" (change)="handleFile($event)">
+        {{uploadTitle}}
+      </label>
+      <input id="file-upload" name='upload_cont_img' type="file" style="display:none;" (change)="handleFile($event)" accept="image/*">
+    </form>
+
+    <div class="btn-list">
+      <button class="btn btn-danger" (click)="proImgChange = false; file = null; uploadTitle = 'Upload Profile Photo'; upload = null;">Cancel</button>
+      <button class="btn btn-primary" (click)="onUpload()" [disabled]="!file">Upload</button>
     </div>
   </div>
 </div>
