--- a/web/src/app/header/header.component.scss
+++ b/web/src/app/header/header.component.scss
@@ -84,9 +84,12 @@
 
 .btn-list {
   border-top: solid 2px lightgrey;
-  margin-top: 20px;
-  margin-right: 30px;
-  margin-left: 30px;
+  margin-top: 10px;
+  margin-right: 10%;
+  margin-left: 10%;
+  position: absolute;
+  width: 80%;
+  bottom: 10px;
 
   button {
     float: right;
@@ -106,6 +109,32 @@
   span {
     font-size: x-large;
   }
+}
+
+.custom-file-upload {
+  border: 1px solid grey;
+  display: inline-block;
+  padding: 6px 12px;
+  cursor: pointer;
+  border-radius: 5px;
+
+  position: absolute;
+  right: 20%;
+  left: 20%;
+  margin: auto;
+  text-align: center;
+  width: auto;
+}
+
+.custom-file-upload:hover {
+  background-color: #039be5;
+  color: white;
+}
+
+.progress {
+  margin-top: 20px;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 @-webkit-keyframes animatetop {
