--- a/web/src/app/main/main.component.html
+++ b/web/src/app/main/main.component.html
@@ -2,7 +2,7 @@
   <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
     <div class="title">
       <p>
-        Welcome to WTF is this
+        Welcome to facial detection system
       </p>
     </div>
 
