add backend request testing

--- a/web/src/app/footer/footer.component.html
+++ b/web/src/app/footer/footer.component.html
@@ -6,7 +6,7 @@
     </div>-->
 
       <footer>&copy; Copyright 2017 HTML.am</footer>
-     Vivian Chen. All rights reserved.
+     Alex Xiao. All rights reserved.
 
   </div>
 </div>
