--- a/web/src/app/header/header.component.html
+++ b/web/src/app/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="navbar-content">
 
     <div class="navbar-header">
-      <a routerLink="" class="navbar-brand">CS 160 Team Project</a>
+      <a routerLink="" class="navbar-brand">CS 160 Team <b><i>Work</i></b></a>
     </div>
 
     <ul class="nav navbar-nav navbar-right header-btn-ul">
