--- a/web/src/app/main/main.component.html
+++ b/web/src/app/main/main.component.html
@@ -2,7 +2,7 @@
   <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
     <div class="title">
       <p>
-        Welcome to facial detection system
+        Welcome to Facial Detection System
       </p>
     </div>
 
@@ -15,6 +15,8 @@
         <p *ngIf="authService.isAuth()">
           Welcome back {{authService.getUsername()}}
         </p>
+        <input [(ngModel)]="a">
+        <button (click)="test()">Test</button>
       </div>
     </div>
 
