working on footer

--- a/web/src/app/footer/footer.component.html
+++ b/web/src/app/footer/footer.component.html
@@ -1,12 +1,21 @@
 <div class="footer-container">
-  <div class="footer-content1">
+  <div class="footer-content">
 
+    <ul class="nav navbar-nav navbar-right footer-ul">
+      <li>
+        <a style="cursor: pointer; line-height: 40px; font-size: large;">Who We Are?</a>
+      </li>
+
+      <li>
+
+      </li>
+    </ul>
 <!--    <div class="profile">
       <img src="./../../assets/img/github.svg">
     </div>-->
 
-      <footer>&copy; Copyright 2017 HTML.am</footer>
-     Alex Xiao. All rights reserved.
+     <!--Copyright 2017 HTML.am-->
+     <!--Alex Xiao. All rights reserved.-->
 
   </div>
 </div>
