--- a/web/src/styles.css
+++ b/web/src/styles.css
@@ -4482,7 +4482,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 
 .navbar-right {
   float: right !important;
-  margin-right: -15px;
+  //margin-right: -15px;
 }
 
 @media (min-width: 768px) {
