--- a/web/src/app/header/header.component.html
+++ b/web/src/app/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="navbar-content">
 
     <div class="navbar-header">
-      <a class="navbar-brand" (click)="goto('home')">CS 160 Team <b><i>Work</i></b></a>
+      <a class="navbar-brand" (click)="goto('home')" style="cursor: pointer">CS 160 Team <b><i>Work</i></b></a>
     </div>
 
     <ul class="nav navbar-nav navbar-right header-btn-ul">
