--- a/web/src/app/header/header.component.scss
+++ b/web/src/app/header/header.component.scss
@@ -14,7 +14,8 @@
   height: 40px;
   background-color: lightgray;
   margin-bottom: 20px;
-  //display: inline-block;
+  width: 100%;
+  -webkit-padding-start: 0;
 }
 
 .menu {
