add footer and icon

--- a/web/src/app/footer/footer.component.html
+++ b/web/src/app/footer/footer.component.html
@@ -1,21 +1,12 @@
 <div class="footer-container">
   <div class="footer-content">
+    <div class="github">
+      <img src="./../../assets/img/github.svg" (click)="gotoGit()">
+    </div>
 
-    <ul class="nav navbar-nav navbar-right footer-ul">
-      <li>
-        <a style="cursor: pointer; line-height: 40px; font-size: large;">Who We Are?</a>
-      </li>
-
-      <li>
-
-      </li>
-    </ul>
-<!--    <div class="profile">
-      <img src="./../../assets/img/github.svg">
-    </div>-->
-
-     <!--Copyright 2017 HTML.am-->
-     <!--Alex Xiao. All rights reserved.-->
+    <div class="right">
+      <span>Team Faceless. All Right Reserved</span>
+    </div>
 
   </div>
 </div>
