--- a/web/src/app/header/header.component.html
+++ b/web/src/app/header/header.component.html
@@ -1,8 +1,12 @@
 <div class="navbar-container">
   <div class="navbar-content">
 
+    <div class="icon">
+      <img src='../../assets/img/icon.png'>
+    </div>
+
     <div class="navbar-header">
-      <a class="navbar-brand" (click)="goto('home')" style="cursor: pointer">CS 160 Team <b><i>Work</i></b></a>
+      <a class="navbar-brand" (click)="goto('home')" style="cursor: pointer">CS 160 Team <b><i>Faceless</i></b></a>
     </div>
 
     <ul class="nav navbar-nav navbar-right header-btn-ul">
