--- a/web/src/app/app.component.css
+++ b/web/src/app/app.component.css
@@ -6,4 +6,7 @@
   padding-top: 20px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   border-radius: 3px;
+  margin-top: 120px;
+  margin-bottom: 70px;
+  display: table;
 }
