--- a/web/src/app/footer/footer.component.html
+++ b/web/src/app/footer/footer.component.html
@@ -5,7 +5,7 @@
     </div>
 
     <div class="right">
-      <span>Team Faceless. All Right Reserved.</span>
+      <span>&copy;Team Faceless. All Right Reserved.</span>
     </div>
 
   </div>
