--- a/web/src/app/upload/upload.component.html
+++ b/web/src/app/upload/upload.component.html
@@ -49,7 +49,8 @@
         Click button to extract frames!!
       </span>
 
-      <button class="btn-primary btn" (click)="extractFrame()">
+      <button class="btn-primary btn" (click)="extractFrame()"
+              [disabled]="upload?.progress !== 100">
         Extract Frames
       </button>
     </div>
@@ -60,7 +61,7 @@
         Click button to detect faces and draw the line!!
       </span>
 
-      <button class="btn-primary btn">
+      <button class="btn-primary btn" (click)="detectFace()" [disabled]="faceBtnDisable">
         Detect Faces
       </button>
     </div>
@@ -90,6 +91,12 @@
               style="background-color: cornflowerblue; color: white; text-align: center; border-radius: 5px;">
           Upload Completed!!!
         </span>
+      </div>
+
+      <div class="extractFrame" *ngIf="!loading && dataSet !== null">
+        <span>FPS: {{dataSet.fps}}</span>
+        <span>Total Frames: {{dataSet.total_frame}}</span>
+        <span>File Name: {{dataSet.fileName}}</span>
       </div>
 
 
