--- a/web/src/app/main/main.component.html
+++ b/web/src/app/main/main.component.html
@@ -1,13 +1,7 @@
-<div class="row">
-  <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-    <div class="title">
-      <p>
-        Welcome to Facial Detection System
-      </p>
-    </div>
+<div class="title">
+  Welcome to Facial Detection System
+</div>
 
-    <div>
-
-    </div>
-  </div>
+<div class="intro-img">
+  <img src="../../assets/img/diagram.png">
 </div>
