--- a/web/src/app/main/main.component.scss
+++ b/web/src/app/main/main.component.scss
@@ -7,3 +7,15 @@
   margin-bottom: 20px;
 }
 
+.intro-img {
+  width: 100%;
+  border: solid lightgrey 1px;
+  padding: 5px;
+
+  img {
+    height: 100%;
+    width: 100%;
+    -o-object-fit: contain;
+    object-fit: contain;
+  }
+}
