--- a/web/src/app/information/information.component.html
+++ b/web/src/app/information/information.component.html
@@ -46,7 +46,7 @@
         <a (click)="goto('yan')">Yanyi Zhou</a>
       </div>
       <div class="info">
-        The most handsome guys in the world!!!
+        The most handsome guys in the world!!! safasfd asfd asdf asd fasdf
       </div>
     </div>
   </div>
