--- a/web/src/app/upload/upload.component.scss
+++ b/web/src/app/upload/upload.component.scss
@@ -91,7 +91,10 @@
   margin: 0 auto;
   display: table;
 
-  span {
-    display: block;
+  video {
+    height: 100%;
+    width: 100%;
+    -o-object-fit: contain;
+    object-fit: contain;
   }
 }
