--- a/web/src/app/upload/upload.component.html
+++ b/web/src/app/upload/upload.component.html
@@ -72,9 +72,9 @@
         </span>
       </div>
 
-      <div class="extractFrame" *ngIf="!loading && resultUrl !== ''">
+      <div class="extractFrame" *ngIf="!loading && dataSet !== null">
         <video controls autoplay>
-          <source [src]="resultUrl" type="video/mp4">
+          <source [src]="dataSet.url" type="video/mp4">
         </video>
       </div>
 
