add information page

--- a/web/src/app/information/information.component.html
+++ b/web/src/app/information/information.component.html
@@ -38,7 +38,7 @@
 
   <div class="member" [ngStyle]="{'transform': animation2}" (click)="turnPage(2)">
     <div class="mem-img">
-      <img src="../../assets/img/profile-img.jpg">
+      <img src="../../assets/member/yizhou.jpg">
     </div>
 
     <div class="mem-info">
@@ -53,12 +53,12 @@
 
   <div class="member" [ngStyle]="{'transform': animation3}" (click)="turnPage(3)">
     <div class="mem-img">
-      <img src="../../assets/img/profile-img.jpg">
+      <img src="../../assets/member/tien.jpg">
     </div>
 
     <div class="mem-info">
       <div class="name">
-        <a (click)="goto()">Tine</a>
+        <a (click)="goto('tien')">Tine</a>
       </div>
       <div class="info">
         The most handsome guys in the world!!!
